--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "akita-node",
-  "version": "0.2.3",
+  "version": "0.3.0",
   "description": "Akita client for node.js",
   "main": "index.js",
   "repository": {
@@ -14,7 +14,8 @@
   },
   "homepage": "https://github.com/maichong/akita-node#readme",
   "dependencies": {
-    "akita": "^0.2.3",
+    "akita": "^0.3.0",
+    "form-data": "^2.1.2",
     "node-fetch": "^1.6.3"
   }
 }
